fixed tiles content overflow

--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -458,6 +458,7 @@
     .tile{
         // padding: 0px;
         min-height: fit-content;
+        height: auto;
         // justify-content: flex-start;
         }
 
